--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -14,7 +14,7 @@
 				<div class="modal-dialog modal-lg">
 					<div class="modal-content">
 						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">Ã—</span>
+							<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
 							</button>
 							<h4 class="modal-title" th:text="#{label.inserisci_attivita}">Inserisci attivita</h4>
 						</div>
@@ -118,7 +118,7 @@
 
 									<!-- fragment da aggiornare -->	
 									<input id="targetTableAttivitaFSC" type="text" name="target" style="display: none;" />
-									<!-- fase a cui agganciare l'attivitÃ  -->
+									<!-- fase a cui agganciare l'attività -->
 									<input id="addAttivitaTo" type="text" name="addAttivitaTo" style="display: none;" />
 								</form>
 							</div>
@@ -552,6 +552,94 @@
 <!-- 									</div> -->
 <!-- 								</div> -->
 
+								<!-- BLOCCO TIPOLOGIA DI EVENTO -->
+								<!-- TIPOLOGIA DELL'EVENTO -->
+								<div class="item form-group">
+									<label class="control-label col-xs-1">
+										<span>13</span>
+									</label>
+									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="tipologiaEvento">
+										<span th:text="#{label.tipologia_evento}">Tipologia dell'evento</span>
+										<span class="required">*</span>
+									</label>
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+										<select id="tipologiaEventoId"
+											class="selectpicker required"
+											required="required"
+											th:field="${eventoWrapper.evento.tipologiaEvento}"
+											data-width="100%" data-style="btn-primary"
+											data-actions-box="true" data-size="10"
+											data-hide-disabled="false"
+											title="Seleziona una tipologia FSC...">
+											<option
+												th:each="tipologia, row: ${T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).values()}"
+												th:value="${tipologia}"
+												th:text="${tipologia.nome}">
+											</option>
+										</select>
+									</div>
+								</div>
+								<!-- Tipologia di gruppo (attivo se selezionato tipologiaEvento=GRUPPI_DI_MIGLIORAMENTO) -->
+								<div class="item form-group tipologiaGruppo" style="display: none;">
+									<div class="col-xs-1"></div>
+									<label class="control-label col-md-3 col-sm-3 col-xs-11">
+										<span th:text="#{label.eventofsc_tipologiaGruppo}"></span>
+										<span class="required">*</span>
+									</label>
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+										<select id="tipologiaGruppo"
+											class="selectpicker"
+											th:field="${eventoWrapper.evento.tipologiaGruppo}"
+											data-width="100%" data-style="btn-primary"
+											data-actions-box="true" data-size="10"
+											data-hide-disabled="false"
+											title="Seleziona una tipologia di gruppo...">
+											<option
+												th:each="tipologia, row: ${T(it.tredi.ecm.dao.enumlist.TipologiaGruppoFSCEnum).values()}"
+												th:value="${tipologia}"
+												th:text="${tipologia.nome}">
+											</option>
+										</select>
+									</div>
+								</div>
+								<!-- Sperimentazione clinica (attivo se tipologiaEvento=ATTIVITA_DI_RICERCA) -->
+								<div class="item form-group sperimentazioneClinica" style="display: none;">
+									<div class="col-xs-1"></div>
+									<label class="control-label col-md-3 col-sm-3 col-xs-11">
+										<span th:text="#{label.eventofsc_sperimentazioneClinica}"></span>
+										<span class="required">*</span>
+									</label>
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+										<div class="radio">
+											<label class="label-radio-workshop label-disabled">
+												<input id="sperimentazioneClinicaSiId" type="radio" class="flat sperimentazioneClinica" th:field="${eventoWrapper.evento.sperimentazioneClinica}" th:value="${true}" />
+												<span th:text="#{label.sÃ¬}">Sì</span>
+											</label>
+										</div>
+										<div class="radio">
+											<label class="label-radio-workshop label-disabled">
+												<input id="sperimentazioneClinicaNoId" type="radio" class="flat sperimentazioneClinica" th:field="${eventoWrapper.evento.sperimentazioneClinica}" th:value="${false}" />
+												<span th:text="#{label.no}">No</span>
+											</label>
+										</div>
+									</div>
+								</div>
+								<!-- Ottenuto il parere del comitato etico (attivo se sperimentazioneClinica=true) -->
+								<div class="item form-group ottenutoComitatoEtico" style="display: none;">
+									<div class="col-xs-1"></div>
+									<label class="control-label col-md-3 col-sm-3 col-xs-11">
+										<span th:text="#{label.eventofsc_ottenutoComitatoEtico}"></span>
+										<span class="required">*</span>
+									</label>
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+										<div class="checkbox">
+										<label>
+											<input class="flat" id="abilitaSediFull" type="checkbox" th:field="${eventoWrapper.evento.ottenutoComitatoEtico}" th:value="${true}" />
+										</label>
+										</div>
+									</div>
+								</div>
+
 								<!-- RESPONSABILI -->
 								<div class="item form-group">
 									<label class="control-label col-xs-1">
@@ -720,7 +808,7 @@
 										<span>26</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="indicatore">
-										<span th:text="#{label.indicatore_efficacia}">Indicatori per misurare lâ€™efficacia formativa del progetto</span>
+										<span th:text="#{label.indicatore_efficacia}">Indicatori per misurare l’efficacia formativa del progetto</span>
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11" id="indicatore">
 										<input type="text" class="form-control" th:field="${eventoWrapper.evento.indicatoreEfficaciaFormativa}" />
@@ -764,14 +852,14 @@
 										<span>29</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11">
-										<span th:text="#{label.evento_sponsorizzato_radio}">L'Evento Ã¨ sponsorizzato?</span>
+										<span th:text="#{label.evento_sponsorizzato_radio}">L'Evento è sponsorizzato?</span>
 										<span class="required">*</span>
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 										<div class="radio">
 											<label>
 												<input type="radio" class="flat sponsor" th:field="${eventoWrapper.evento.eventoSponsorizzato}" th:value="${true}" />
-												<span th:text="#{label.sÃ¬}">SÃ¬</span>
+												<span th:text="#{label.sì}">Sì</span>
 											</label>
 										</div>
 										<div class="radio">
@@ -803,7 +891,7 @@
 										<div class="radio">
 											<label>
 												<input type="radio" class="flat finanziamento" th:field="${eventoWrapper.evento.altreFormeFinanziamento}" th:value="${true}" />
-												<span th:text="#{label.sÃ¬}">SÃ¬</span>
+												<span th:text="#{label.sì}">Sì</span>
 											</label>
 										</div>
 										<div class="radio">
@@ -850,14 +938,14 @@
 										<span>31</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11">
-										<span th:text="#{label.si_avvale_di_partner}">Lâ€™evento si avvale di partner?</span>
+										<span th:text="#{label.si_avvale_di_partner}">L’evento si avvale di partner?</span>
 										<span class="required">*</span>
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 										<div class="radio">
 											<label>
 												<input type="radio" class="flat partner" th:field="${eventoWrapper.evento.eventoAvvalePartner}" th:value="${true}" />
-												<span th:text="#{label.sÃ¬}">SÃ¬</span>
+												<span th:text="#{label.sì}">Sì</span>
 											</label>
 										</div>
 										<div class="radio">
@@ -890,7 +978,7 @@
 
 								<div class="divider-dashed"></div>
 
-								<!-- PROCEDURA VERIFICA QUALITÃ€ -->
+								<!-- PROCEDURA VERIFICA QUALITA' -->
 								<div class="item form-group">
 									<label class="control-label col-xs-1">
 										<span>33</span>
@@ -901,7 +989,7 @@
 										<div class="checkbox">
 											<label>
 												<input type="checkbox" class="flat" th:field="${eventoWrapper.evento.proceduraVerificaQualitaPercepita}" th:value="${true}" />
-												<span th:text="#{label.procedura_verifica_qualita}">Eâ€™ prevista una procedura di verifica della qualitÃ  percepita</span>
+												<span th:text="#{label.procedura_verifica_qualita}">E’ prevista una procedura di verifica della qualità percepita</span>
 												<span class="required">*</span>
 											</label>
 										</div>
@@ -938,6 +1026,69 @@
 			
 			<script th:inline="javascript">
 			/*<![CDATA[*/
+				$(document).ready(function() {
+					//Aggancio eventi
+					$('#tipologiaEventoId').on('change', setEvResTipologiaGruppo);
+					$('#tipologiaEventoId').on('change', setEvResSperimentazioneClinica);
+					$('#tipologiaEventoId').on('change', setEvResOttenutoComitatoEtico);
+					//non funziona
+					//$('#sperimentazioneClinicaSiId, #sperimentazioneClinicaNoId').on('change', setEvResOttenutoComitatoEtico);
+					$(".sperimentazioneClinica").on("ifChecked", setEvResOttenutoComitatoEtico);
+
+					setEvResTipologiaGruppo();
+					setEvResSperimentazioneClinica();
+					setEvResOttenutoComitatoEtico();
+				});
+
+				//Codice
+				function setEvResTipologiaGruppo() {
+					//console.log($('#tipologiaEventoId').val());
+					var val = $('#tipologiaEventoId').selectpicker('val');
+					//alert(tipEvVal)
+					if (val === 'GRUPPI_DI_MIGLIORAMENTO') {
+						//alert('mostro')
+						$(".tipologiaGruppo").slideDown("slow");
+					} else {
+						//alert('hide')
+						$(".tipologiaGruppo").slideUp("slow");
+						//resetto il valore
+						$("#tipologiaGruppo").selectpicker('deselectAll');
+						$("#tipologiaGruppo").selectpicker('refresh');
+					}
+				}
+				
+				function setEvResSperimentazioneClinica() {
+					//console.log($('#tipologiaEventoId').val());
+					var val = $('#tipologiaEventoId').selectpicker('val');
+					//alert(tipEvVal)
+					if (val === 'ATTIVITA_DI_RICERCA') {
+						//alert('mostro')
+						$(".sperimentazioneClinica").slideDown("slow");
+					} else {
+						//alert('hide')
+						$(".sperimentazioneClinica").slideUp("slow");
+						//resetto il valore
+						//$("#sperimentazioneClinica").selectpicker('deselectAll');
+						//$("#sperimentazioneClinica").selectpicker('refresh');
+					}
+				}
+				
+				function setEvResOttenutoComitatoEtico() {
+					//console.log($('#tipologiaEventoId').val());
+					var val = $('#tipologiaEventoId').selectpicker('val');
+					//alert($('#sperimentazioneClinicaSiId').is(':checked'))
+					if (val === 'ATTIVITA_DI_RICERCA' && $('#sperimentazioneClinicaSiId').is(':checked')) {
+						//alert('mostro')
+						$(".ottenutoComitatoEtico").slideDown("slow");
+					} else {
+						//alert('hide')
+						$(".ottenutoComitatoEtico").slideUp("slow");
+						//resetto il valore
+						//$("#sperimentazioneClinica").selectpicker('deselectAll');
+					}
+				}
+				
+			 
 			 /********************* PROGRAMMA GIORNALIERO ****************************/          
 			  function openAddAttivitaTo(target,programmaIndex){
 					$('#targetTableAttivitaFSC').val(target);
@@ -990,7 +1141,7 @@
 					 	 })
 				}
 				
-				/*parametrizzabile - Ã¨ identica a RES*/
+				/*parametrizzabile - è identica a RES*/
 				function removeAttivitaFrom(target,caller){
 					var rowIndex = $(caller).parent().parent().data('row-id');
 					var removeAttivitaFrom = $(caller).parent().parent().parent().parent().parent().data('programma-id');
@@ -999,7 +1150,7 @@
 					$("#" + target).load(url);
 				}
 			           
-				/*parametrizzabile - Ã¨  identica a RES*/
+				/*parametrizzabile - è  identica a RES*/
 				function reloadSection(selectedTab){
 					if(selectedTab == 'tab1'){
 						sendAjaxReloadSection('1');
